fixed caption on mobile / gallery

--- a/styles/specific.css
+++ b/styles/specific.css
@@ -430,8 +430,9 @@ transition: transform .3s ease-in-out;
 
 .caption {
     color: white;
+    font-weight: 400;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1rem;
     margin-bottom: 10px;
 }
 
